--- a/build_tools/changelogs/changelog.txt
+++ b/build_tools/changelogs/changelog.txt
@@ -1,1 +1,1 @@
-This Cryptocurrency has been built with PoS Cryptocurrency Generator
+This Cryptocurrency has been built with PoS Cryptocurrency Generator - https://coingenerator.sh
